Stacked social buttons on mobile.  Fixes #27

--- a/source/stylesheets/site.css
+++ b/source/stylesheets/site.css
@@ -9,7 +9,7 @@ body {
 
 .social {
   margin-top: 10px;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
 
 
